--- a/css/style.css
+++ b/css/style.css
@@ -187,9 +187,10 @@ table.psets {
   margin-bottom: 10px;
 }
 
-.instructor {
-  display: inline-block;
-  width: 200px;
-  text-align: center;
-  margin-right: 20px;
+.instructorphoto img {
+  width: 120px;
+  height: 120px;          
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
