--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ a:hover {
 
 /* Schedule */
 
-table.schedule {
+/*table.schedule {
 	border-width: 1px;
 	border-spacing: 2px;
 	border-style: none;
@@ -158,6 +158,49 @@ table.notes {
 	border-bottom: 1px solid;
 	padding-bottom: 5px;
 	padding-top: 5px;
+}*/
+
+
+.table_component {
+    overflow: auto;
+    width: 100%;
+}
+
+.table_component table {
+    border: 1px solid #dededf;
+    height: 100%;
+    width: 100%;
+    table-layout: auto;
+    border-collapse: collapse;
+    border-spacing: 1px;
+    text-align: left;
+}
+
+.table_component caption {
+    caption-side: top;
+    text-align: left;
+}
+
+.table_component th {
+    border: 1px solid #dededf;
+    background-color: #eceff1;
+    color: #000000;
+    padding: 5px;
+}
+
+.table_component td {
+    border: 1px solid #dededf;
+    padding: 5px;
+}
+
+.table_component tr:nth-child(even) td {
+/*    background-color: #ffffff;*/
+    color: #000000;
+}
+
+.table_component tr:nth-child(odd) td {
+    background-color: #ffffff;
+    color: #000000;
 }
 
 
